JumpScript/tests/baselines/reference/constructorOverloads5.errors.txt
tests/cases/compiler/constructorOverloads5.jump(4,21): error TS2300: Duplicate identifier 'RegExp'.
tests/cases/compiler/constructorOverloads5.jump(5,21): error TS2300: Duplicate identifier 'RegExp'.
tests/cases/compiler/constructorOverloads5.jump(6,18): error TS2300: Duplicate identifier 'RegExp'.


==== tests/cases/compiler/constructorOverloads5.jump (3 errors) ====
     interface IArguments {}
    
     declare module M {
        export function RegExp(pattern: string): RegExp;
                        ~~~~~~
!!! error TS2300: Duplicate identifier 'RegExp'.
        export function RegExp(pattern: string, flags: string): RegExp;
                        ~~~~~~
!!! error TS2300: Duplicate identifier 'RegExp'.
        export class RegExp {
                     ~~~~~~
!!! error TS2300: Duplicate identifier 'RegExp'.
            constructor(pattern: string);
            constructor(pattern: string, flags: string);
            exec(string: string): string[];
            test(string: string): boolean;
            source: string;
            global: boolean;
            ignoreCase: boolean;
            multiline: boolean;
            lastIndex: boolean;
        }
    }
    